@@ -28,7 +28,7 @@ foo (unsigned int x, unsigned int y)
 void
 testTortureExecute (void)
 {
-#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5 && __GNUC_MINOR__ < 5))
+#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5))
   foo (-2U, 1);
   if (cnt != 2)
     ASSERT (0);
